@@ -1,6 +1,6 @@
 /*
  * Original Author -> Harry Yang (taketoday@foxmail.com) https://taketoday.cn
- * Copyright © TODAY & 2017 - 2022 All Rights Reserved.
+ * Copyright © TODAY & 2017 - 2023 All Rights Reserved.
  *
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER
  *
@@ -21,7 +21,6 @@
 package cn.taketoday.web.reactive.function.client;
 
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Named;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -45,7 +44,6 @@ import java.time.Duration;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -70,7 +68,7 @@ import cn.taketoday.http.client.reactive.HttpComponentsClientHttpConnector;
 import cn.taketoday.http.client.reactive.JdkClientHttpConnector;
 import cn.taketoday.http.client.reactive.JettyClientHttpConnector;
 import cn.taketoday.http.client.reactive.ReactorClientHttpConnector;
-import cn.taketoday.lang.Nullable;
+import cn.taketoday.http.client.reactive.ReactorNetty2ClientHttpConnector;
 import cn.taketoday.web.reactive.function.BodyExtractors;
 import cn.taketoday.web.reactive.function.client.WebClient.ResponseSpec;
 import cn.taketoday.web.testfixture.Pojo;
@@ -79,6 +77,7 @@ import okhttp3.mockwebserver.MockWebServer;
 import okhttp3.mockwebserver.RecordedRequest;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
+import reactor.core.publisher.Sinks;
 import reactor.netty.http.client.HttpClient;
 import reactor.netty.resources.ConnectionProvider;
 import reactor.test.StepVerifier;
@@ -96,25 +95,26 @@ import static org.junit.jupiter.api.Named.named;
  * @author Sam Brannen
  * @author Martin Tarjányi
  */
-@Disabled("https://github.com/TAKETODAY/today-infrastructure/issues/168")
+//@Execution(ExecutionMode.SAME_THREAD)
 class WebClientIntegrationTests {
 
   @Retention(RetentionPolicy.RUNTIME)
   @Target(ElementType.METHOD)
   @ParameterizedTest(name = "[{index}] {0}")
   @MethodSource("arguments")
-  @interface ParameterizedWebClientTest { }
+  @interface ParameterizedWebClientTest {
+  }
 
-  public static Stream<Named<ClientHttpConnector>> arguments() {
+  static Stream<Named<ClientHttpConnector>> arguments() {
     return Stream.of(
             named("Reactor Netty", new ReactorClientHttpConnector()),
+            named("Reactor Netty 2", new ReactorNetty2ClientHttpConnector()),
             named("JDK", new JdkClientHttpConnector()),
             named("Jetty", new JettyClientHttpConnector()),
             named("HttpComponents", new HttpComponentsClientHttpConnector())
     );
   }
 
-  @Nullable
   private MockWebServer server;
 
   private WebClient webClient;
@@ -190,7 +190,7 @@ class WebClientIntegrationTests {
   }
 
   @ParameterizedWebClientTest
-  void retrieveJsonWithTypeReference(ClientHttpConnector connector) {
+  void retrieveJsonWithParameterizedTypeReference(ClientHttpConnector connector) {
     startServer(connector);
 
     String content = "{\"containerValue\":{\"bar\":\"barbar\",\"foo\":\"foofoo\"}}";
@@ -419,7 +419,6 @@ class WebClientIntegrationTests {
               .collect(Collectors.joining(",", "[", "]"))
               .block();
 
-      assertThat(json).isNotNull();
       prepareResponse(response -> response
               .setHeader("Content-Type", "application/json")
               .setBody(json));
@@ -536,6 +535,7 @@ class WebClientIntegrationTests {
   }
 
   @ParameterizedWebClientTest
+  @SuppressWarnings("deprecation")
   void retrieve500(ClientHttpConnector connector) {
     startServer(connector);
 
@@ -560,7 +560,6 @@ class WebClientIntegrationTests {
               assertThat(ex.getResponseBodyAsString()).isEqualTo(errorMessage);
 
               HttpRequest request = ex.getRequest();
-              assertThat(request).isNotNull();
               assertThat(request.getMethod()).isEqualTo(HttpMethod.GET);
               assertThat(request.getURI()).isEqualTo(URI.create(this.server.url(path).toString()));
               assertThat(request.getHeaders()).isNotNull();
@@ -644,6 +643,7 @@ class WebClientIntegrationTests {
   }
 
   @ParameterizedWebClientTest
+  @SuppressWarnings("deprecation")
   void retrieve555UnknownStatus(ClientHttpConnector connector) {
     startServer(connector);
 
@@ -731,8 +731,8 @@ class WebClientIntegrationTests {
       ByteArrayOutputStream bos = new ByteArrayOutputStream();
       try {
         request.getBody().copyTo(bos);
-        String actual = bos.toString("UTF-8");
-        String expected = new String(Files.readAllBytes(resource.getFile().toPath()), StandardCharsets.UTF_8);
+        String actual = bos.toString(StandardCharsets.UTF_8);
+        String expected = Files.readString(resource.getFile().toPath(), StandardCharsets.UTF_8);
         assertThat(actual).isEqualTo(expected);
       }
       catch (IOException ex) {
@@ -766,7 +766,7 @@ class WebClientIntegrationTests {
   }
 
   @ParameterizedWebClientTest
-  void statusHandlerTypeReference(ClientHttpConnector connector) {
+  void statusHandlerParameterizedTypeReference(ClientHttpConnector connector) {
     startServer(connector);
 
     prepareResponse(response -> response.setResponseCode(500)
@@ -867,6 +867,12 @@ class WebClientIntegrationTests {
 
   @ParameterizedWebClientTest
   void statusHandlerSuppressedErrorSignalWithFlux(ClientHttpConnector connector) {
+
+    // Temporarily disabled, leads to io.netty5.buffer.BufferClosedException
+    if (connector instanceof ReactorNetty2ClientHttpConnector) {
+      return;
+    }
+
     startServer(connector);
 
     prepareResponse(response -> response.setResponseCode(500)
@@ -1064,6 +1070,7 @@ class WebClientIntegrationTests {
   }
 
   @ParameterizedWebClientTest
+  @SuppressWarnings("deprecation")
   void exchangeForUnknownStatusCode(ClientHttpConnector connector) {
     startServer(connector);
 
@@ -1087,28 +1094,6 @@ class WebClientIntegrationTests {
       assertThat(request.getHeader(HttpHeaders.ACCEPT)).isEqualTo("*/*");
       assertThat(request.getPath()).isEqualTo("/unknownPage");
     });
-  }
-
-  @ParameterizedWebClientTest
-  void exchangeWithRelativeUrl(ClientHttpConnector connector) {
-    startServer(connector);
-
-    String uri = "/api/v4/groups/1";
-    Mono<ResponseEntity<Void>> responseMono = WebClient.builder().build().get().uri(uri)
-            .retrieve().toBodilessEntity();
-
-    StepVerifier.create(responseMono)
-            .expectErrorSatisfies(throwable -> {
-              assertThat(throwable).isInstanceOf(WebClientResponseException.class);
-              WebClientResponseException ex = (WebClientResponseException) throwable;
-
-              HttpRequest request = ex.getRequest();
-
-              assertThat(request).isNotNull();
-              assertThat(request.getMethod()).isEqualTo(HttpMethod.GET);
-              assertThat(request.getURI()).isEqualTo(URI.create(uri));
-            })
-            .verify(Duration.ofSeconds(5));
   }
 
   @ParameterizedWebClientTest
@@ -1190,7 +1175,7 @@ class WebClientIntegrationTests {
 
     prepareResponse(response -> response
             .setHeader("Content-Type", "text/plain")
-            .addHeader("Set-Cookie", "testkey1=testvalue1;")
+            .addHeader("Set-Cookie", "testkey1=testvalue1") // TODO invalid ";" at the end
             .addHeader("Set-Cookie", "testkey2=testvalue2; Max-Age=42; HttpOnly; SameSite=Lax; Secure")
             .setBody("test"));
 
@@ -1223,7 +1208,7 @@ class WebClientIntegrationTests {
   void invalidDomain(ClientHttpConnector connector) {
     startServer(connector);
 
-    String url = "shttp://example.invalid";
+    String url = "http://example.invalid";
     Mono<Void> result = this.webClient.get().uri(url).retrieve().bodyToMono(Void.class);
 
     StepVerifier.create(result)
@@ -1283,12 +1268,13 @@ class WebClientIntegrationTests {
   private <T> Mono<T> doMalformedChunkedResponseTest(
           ClientHttpConnector connector, Function<ResponseSpec, Mono<T>> handler) {
 
-    AtomicInteger port = new AtomicInteger();
+    Sinks.One<Integer> portSink = Sinks.one();
 
     Thread serverThread = new Thread(() -> {
       // No way to simulate a malformed chunked response through MockWebServer.
       try (ServerSocket serverSocket = new ServerSocket(0)) {
-        port.set(serverSocket.getLocalPort());
+        Sinks.EmitResult result = portSink.tryEmitValue(serverSocket.getLocalPort());
+        assertThat(result).isEqualTo(Sinks.EmitResult.OK);
         Socket socket = serverSocket.accept();
         InputStream is = socket.getInputStream();
 
@@ -1312,12 +1298,13 @@ class WebClientIntegrationTests {
 
     serverThread.start();
 
-    WebClient client = WebClient.builder()
-            .clientConnector(connector)
-            .baseUrl("http://localhost:" + port)
-            .build();
-
-    return handler.apply(client.post().retrieve());
+    return portSink.asMono().flatMap(port -> {
+      WebClient client = WebClient.builder()
+              .clientConnector(connector)
+              .baseUrl("http://localhost:" + port)
+              .build();
+      return handler.apply(client.post().retrieve());
+    });
   }
 
   private void prepareResponse(Consumer<MockResponse> consumer) {
